--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,5 @@
-
+eureka.instance.prefer-ip-address=true
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.client.service-url.defaultzone:http://http://localhost:8761/eureka
+spring.application.name=USER-SERVICE
